--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 langchain==0.0.302
 openai==0.28.1
 tiktoken==0.5.1
+python-dotenv==1.0.0
+faiss-cpu==1.7.4
+sentence-transformers==2.2.2
+python-pptx==0.6.22
+unstructured==0.10.18
+
